force-app/main/default/objects/OnBoarding__c/OnBoarding__c.object-meta.xml
<CustomObject>
    <label>OnBoarding</label>
    <nameField>
        <displayFormat>user-{000000}</displayFormat>
        <label>OnBoarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OnBoarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>