force-app/main/default/objects/OnBoarding__c/fields/Background_Investigator_Level__c.field-meta.xml
<CustomField>
    <fullName>Background_Investigator_Level__c</fullName>
    <label>Background Investigator Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level I</fullName>
            </value>
            <value>
                <fullName>Level II</fullName>
            </value>
            <value>
                <fullName>Level III</fullName>
            </value>
            <value>
                <fullName>Level IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>