force-app/main/default/objects/OnBoarding__c/fields/BI_Candidate_type__c.field-meta.xml
<CustomField>
    <fullName>BI_Candidate_type__c</fullName>
    <label>BI Candidate type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>SCA</fullName>
            </value>
            <value>
                <fullName>Non-SCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>