force-app/main/default/objects/OnBoarding__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Candidate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>