force-app/main/default/objects/OnBoarding__c/fields/CCPL__c.field-meta.xml
<CustomField>
    <fullName>CCPL__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CCPL</label>
    <type>Checkbox</type>
</CustomField>