force-app/main/default/objects/OnBoarding__c/fields/Cell_phone__c.field-meta.xml
<CustomField>
    <fullName>Cell_phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cell phone#</label>
    <type>Phone</type>
</CustomField>