force-app/main/default/objects/OnBoarding__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Control Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>