force-app/main/default/objects/OnBoarding__c/fields/Credential_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Credential_Issue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credential Issue Date</label>
    <type>Date</type>
</CustomField>