force-app/main/default/objects/OnBoarding__c/fields/Date_Fingerprinted__c.field-meta.xml
<CustomField>
    <fullName>Date_Fingerprinted__c</fullName>
    <label>Date Fingerprinted</label>
    <type>Date</type>
</CustomField>