force-app/main/default/objects/OnBoarding__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dfsle__EnvelopeStatus__c</referenceTo>
    <relationshipLabel>OnBoarding</relationshipLabel>
    <relationshipName>OnBoarding</relationshipName>
    <type>Lookup</type>
</CustomField>