force-app/main/default/objects/OnBoarding__c/fields/Finger_printing_due_date__c.field-meta.xml
<CustomField>
    <fullName>Finger_printing_due_date__c</fullName>
    <label>Finger printing due date</label>
    <type>Date</type>
</CustomField>