force-app/main/default/objects/OnBoarding__c/fields/Investigative_Experience__c.field-meta.xml
<CustomField>
    <fullName>Investigative_Experience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigative Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>