force-app/main/default/objects/OnBoarding__c/fields/Investigator_Clearance_Level__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Clearance_Level__c</fullName>
    <label>Investigator Clearance Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DoD Secret</fullName>
            </value>
            <value>
                <fullName>Secret</fullName>
            </value>
            <value>
                <fullName>TS/SCI</fullName>
            </value>
            <value>
                <fullName>Unclassified Tasks only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>