force-app/main/default/objects/OnBoarding__c/fields/Investigator_Credential_number__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Credential_number__c</fullName>
    <label>Investigator Credential number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>