force-app/main/default/objects/OnBoarding__c/fields/Investigator_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Date_of_Birth__c</fullName>
    <label>Investigator Date of Birth</label>
    <type>Date</type>
</CustomField>