force-app/main/default/objects/OnBoarding__c/fields/Investigator_Place_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Place_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigator Place of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>