force-app/main/default/objects/OnBoarding__c/fields/Investigator_Status__c.field-meta.xml
<CustomField>
    <fullName>Investigator_Status__c</fullName>
    <label>Investigator Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Terminated by Government</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>