force-app/main/default/objects/OnBoarding__c/fields/Need_Finger_Printing__c.field-meta.xml
<CustomField>
    <fullName>Need_Finger_Printing__c</fullName>
    <label>Need Finger Printing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>