force-app/main/default/objects/OnBoarding__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>