force-app/main/default/objects/OnBoarding__c/fields/Paychex_ID__c.field-meta.xml
<CustomField>
    <fullName>Paychex_ID__c</fullName>
    <label>ADP File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>