force-app/main/default/objects/OnBoarding__c/fields/Position_under_the_contract__c.field-meta.xml
<CustomField>
    <fullName>Position_under_the_contract__c</fullName>
    <label>Position under the contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>