force-app/main/default/objects/OnBoarding__c/fields/Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_Rating__c</fullName>
    <label>Quality Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>