force-app/main/default/objects/OnBoarding__c/fields/Send_Credentials_To_User__c.field-meta.xml
<CustomField>
    <fullName>Send_Credentials_To_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Credentials To User</label>
    <type>Checkbox</type>
</CustomField>