force-app/main/default/objects/OnBoarding__c/fields/System_Access__c.field-meta.xml
<CustomField>
    <fullName>System_Access__c</fullName>
    <label>System Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intel</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
                <label>BI</label>
            </value>
            <value>
                <fullName>DHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>