force-app/main/default/objects/OnBoarding__c/fields/User_Created__c.field-meta.xml
<CustomField>
    <fullName>User_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Created</label>
    <type>Checkbox</type>
</CustomField>