force-app/main/default/objects/OnBoarding__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <label>User Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Customer User</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
                <isActive>false</isActive>
                <label>Case Manager</label>
            </value>
            <value>
                <fullName>Investigator</fullName>
                <isActive>false</isActive>
                <label>Investigator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>