force-app/main/default/objects/OnBoarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Cell_phone__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Email__c</columns>
    <columns>User__c</columns>
    <columns>Address__c</columns>
    <columns>Send_Credentials_To_User__c</columns>
    <columns>User_Profile__c</columns>
    <columns>System_Access__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>